--- a/app/src/main/res/layout/activity_shops.xml
+++ b/app/src/main/res/layout/activity_shops.xml
@@ -36,31 +36,31 @@
                 android:id="@+id/ShopBottomHome"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="30dp"
+                app:layout_constraintEnd_toStartOf="@+id/ShopBottomShops"
                 app:layout_constraintStart_toStartOf="parent"
-                app:srcCompat="@drawable/img_5" />
+                app:srcCompat="@drawable/img_6" />
 
             <ImageView
                 android:id="@+id/ShopBottomShops"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginStart="54dp"
+                app:layout_constraintEnd_toStartOf="@+id/ShopBottomCart"
                 app:layout_constraintStart_toEndOf="@+id/ShopBottomHome"
-                app:srcCompat="@drawable/img_10" />
+                app:srcCompat="@drawable/img_7" />
 
             <ImageView
                 android:id="@+id/ShopBottomCart"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginEnd="54dp"
-                app:layout_constraintEnd_toStartOf="@+id/ShopBottomUser"
-                app:srcCompat="@drawable/img_8" />
+                app:srcCompat="@drawable/img_8"
+                app:layout_constraintStart_toEndOf="@+id/ShopBottomShops"
+                app:layout_constraintEnd_toStartOf="@+id/ShopBottomUser" />
 
             <ImageView
                 android:id="@+id/ShopBottomUser"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:layout_marginEnd="30dp"
+                app:layout_constraintStart_toEndOf="@+id/ShopBottomCart"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/img_9" />
 
